--- a/ubuntu/base/Dockerfile
+++ b/ubuntu/base/Dockerfile
@@ -6,11 +6,11 @@ tools installed and/or upgraded."
 
 
 ENV DEBIAN_FRONTEND noninteractive
+
+
+# ----------------------------------------------------------------------------
 RUN apt-get update \
     && apt-get upgrade -y \
-    && apt-get install -y --no-install-recommends \
-        apt-utils \
-        build-essential \
     && rm -rf /var/lib/apt/lists/*
 
 
@@ -18,60 +18,68 @@ RUN apt-get update \
 # Common tool and applications provided by the base system
 RUN apt-get update \
     && apt-get install -y --no-install-recommends \
+        apt-utils \
+        build-essential \
+    && apt-get install -y --no-install-recommends \
         openssh-client \
         ca-certificates \
+    && apt-get install -y --no-install-recommends \
         file \
         curl \
+    && apt-get install -y --no-install-recommends \
         wget \
         git \
+    && apt-get install -y --no-install-recommends \
         subversion \
         unzip \
+    && apt-get install -y --no-install-recommends \
         bzip2 \
         gzip \
+    && apt-get install -y --no-install-recommends \
         xz-utils \
         bison \
+    && apt-get install -y --no-install-recommends \
         flex \
         gfortran \
+    && apt-get install -y --no-install-recommends \
         autoconf \
         automake \
+    && apt-get install -y --no-install-recommends \
         texinfo \
         vim \
+    && apt-get install -y --no-install-recommends \
+        libcurl4-openssl-dev \
+        mlocate \
+    && apt-get install -y --no-install-recommends \
+        pkg-config \
+        expat \
+    && apt-get install -y --no-install-recommends \
+        gettext \
+        libexpat-dev \
     && rm -rf /var/lib/apt/lists/*
 
 
 # ----------------------------------------------------------------------------
 # Install gosu so that the entrypoint script (installed later) can change the
 # specified user.  "gosu is used for easy step-down from root"
-RUN apt-get update && apt-get install -y --no-install-recommends \
-        libsdl2-dev \
-        libsdl2-ttf-dev \
-        libpango1.0-dev \
-        libgl1-mesa-dev \
-        libfreeimage-dev \
-        libopenal-dev \
-        libsndfile-dev \
-    && rm -rf /var/lib/apt/lists/*
+# - This is where it can be found
+#     https://github.com/tianon/gosu/releases
+# - This is the source I used to figure out how to install it
+#     https://github.com/docker-library/redis/blob/master/2.8/Dockerfile
+RUN gpg --keyserver pool.sks-keyservers.net --recv-keys B42F6819007F00F88E364FD4036A9C25BF357DD4
+RUN curl -o /usr/local/bin/gosu -fSL "https://github.com/tianon/gosu/releases/download/1.7/gosu-$(dpkg --print-architecture)" \
+    && curl -o /usr/local/bin/gosu.asc -fSL "https://github.com/tianon/gosu/releases/download/1.7/gosu-$(dpkg --print-architecture).asc" \
+    && gpg --verify /usr/local/bin/gosu.asc \
+    && rm /usr/local/bin/gosu.asc \
+    && chmod +x /usr/local/bin/gosu
 
-RUN apt-get update && apt-get install -y --no-install-recommends \
-        ruby-dev \
-    && rm -rf /var/lib/apt/lists/*
-
-RUN gem install gosu
-
-RUN apt-get update && apt-get install -y --no-install-recommends \
-        libcurl4-openssl-dev \
-    && rm -rf /var/lib/apt/lists/*
 
 # ----------------------------------------------------------------------------
 # Update git to a version that isn't broken
-ENV GIT_VERSION=v2.6.4 \
+ENV GIT_VERSION=v2.7.0 \
     GIT_SOURCE=/usr/local/src/git.git
 
-RUN apt-get update && apt-get install -y --no-install-recommends \
-        expat \
-        gettext \
-        libexpat-dev \
-        libssl-dev \
+RUN apt-get update \
     && apt-get install -y --no-install-recommends \
         zlib1g-dev \
     && mkdir $GIT_SOURCE \
@@ -87,11 +95,6 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     && cd .. \
     && rm -rf $GIT_SOURCE \
     && apt-get remove -y \
-        expat \
-        gettext \
-        libexpat-dev \
-        libssl-dev \
         zlib1g-dev \
     && apt-get autoremove -y \
     && rm -rf /var/lib/apt/lists/*
-
