--- a/ubuntu/node/Dockerfile
+++ b/ubuntu/node/Dockerfile
@@ -40,8 +40,8 @@ ENV THE_USER=espa
 # Define the installation and library locations
 ENV PREFIX=/espa/runtime \
     ESPAINC=/espa/runtime/include \
-    ESPALIB=/espa/runtime/lib
-
+    ESPALIB=/espa/runtime/lib \
+    ESPA_SCHEMA=/espa/runtime/espa-product-formatter/schema/espa_internal_metadata_v1_3.xsd
 
 # ----------------------------------------------------------------------------
 # Clone the software and then build and install it
@@ -49,77 +49,72 @@ ENV PREFIX=/espa/runtime \
 RUN mkdir -p /espa/src
 
 RUN REPO_NAME=espa-product-formatter \
-    && REPO_TAG=docker-development
-RUN cd /espa/src \
-#    && git clone https://github.com/USGS-EROS/${REPO_NAME}.git ${REPO_NAME} \
-#    && cd ${REPO_NAME} \
-#    && git checkout $REPO_TAG \
-#    && make -f Makefile.static \
-#    && make -f Makefile.static install \
-#    && cd .. \
-#    && rm -rf ${REPO_NAME}
+    && REPO_TAG=remotes/origin/docker-development \
+    && cd /espa/src \
+    && git clone https://github.com/USGS-EROS/${REPO_NAME}.git ${REPO_NAME} \
+    && cd ${REPO_NAME} \
+    && git checkout ${REPO_TAG} \
+    && make BUILD_STATIC=yes \
+    && make install \
+    && cd .. \
+    && rm -rf ${REPO_NAME}
 
-#RUN REPO_NAME=espa-spectral-indices \
-#    && REPO_TAG=docker-development \
-#    && cd /espa/src \
-#    && git clone https://github.com/USGS-EROS/${REPO_NAME}.git ${REPO_NAME} \
-#    && cd ${REPO_NAME} \
-#    && git checkout $REPO_TAG \
-#    && make BUILD_TYPE=-static \
-#    && make PREFIX=${PREFIX} install \
-#    && cd .. \
-#    && rm -rf ${REPO_NAME}
-#
-#RUN REPO_NAME=espa-cloud-masking \
-#    && REPO_TAG=docker-development \
-#    && cd /espa/src \
-#    && git clone https://github.com/USGS-EROS/${REPO_NAME}.git ${REPO_NAME} \
-#    && cd ${REPO_NAME} \
-#    && git checkout $REPO_TAG \
-#    && make BUILD_TYPE=-static \
-#    && make PREFIX=${PREFIX} install \
-#    && cd .. \
-#    && rm -rf ${REPO_NAME}
-#
+RUN REPO_NAME=espa-spectral-indices \
+    && REPO_TAG=remotes/origin/docker-development \
+    && cd /espa/src \
+    && git clone https://github.com/USGS-EROS/${REPO_NAME}.git ${REPO_NAME} \
+    && cd ${REPO_NAME} \
+    && git checkout ${REPO_TAG} \
+    && make BUILD_STATIC=yes \
+    && make install \
+    && cd .. \
+    && rm -rf ${REPO_NAME}
+
+RUN REPO_NAME=espa-cloud-masking \
+    && REPO_TAG=dev_mar2016 \
+    && cd /espa/src \
+    && git clone https://github.com/USGS-EROS/${REPO_NAME}.git ${REPO_NAME} \
+    && cd ${REPO_NAME} \
+    && git checkout ${REPO_TAG} \
+    && make BUILD_STATIC=yes \
+    && make install \
+    && cd .. \
+    && rm -rf ${REPO_NAME}
+
 #RUN REPO_NAME=espa-surface-water-extent \
 #    && REPO_TAG=docker-development \
 #    && cd /espa/src \
 #    && git clone https://github.com/USGS-EROS/${REPO_NAME}.git ${REPO_NAME} \
 #    && cd ${REPO_NAME} \
-#    && git checkout $REPO_TAG \
-#    && cd not-validated-prototype-dswe \
-#    && make -f Makefile.static \
-#    && make -f Makefile.static install \
+#    && git checkout ${REPO_TAG} \
+#    && make BUILD_STATIC=yes \
+#    && make install \
 #    && cd ../.. \
 #    && rm -rf ${REPO_NAME}
-#
+
 #RUN REPO_NAME=espa-surface-reflectance \
 #    && REPO_TAG=docker-development \
 #    && cd /espa/src \
 #    && git clone https://github.com/USGS-EROS/${REPO_NAME}.git ${REPO_NAME} \
 #    && cd ${REPO_NAME} \
-#    && git checkout $REPO_TAG \
-#    && cd ledaps/ledapsSrc/src/ \
-#    && make -f Makefile.static \
-#    && make -f Makefile.static install \
-#    && cd ../../../not-validated-prototype-l8_sr/c_version/src \
-#    && make -f Makefile.static \
-#    && make -f Makefile.static install \
-#    && cd ../../.. \
+#    && git checkout ${REPO_TAG} \
+#    && make BUILD_STATIC=yes \
+#    && make install \
+#    && cd .. \
 #    && rm -rf ${REPO_NAME}
-#
+
 #RUN REPO_NAME=espa-land-surface-temperature \
 #    && REPO_TAG=dev_v0.0.1 \
 #    && cd /espa/src \
 #    && git clone https://github.com/USGS-EROS/${REPO_NAME}.git ${REPO_NAME} \
 #    && cd ${REPO_NAME} \
-#    && git checkout $REPO_TAG \
-#    && make BUILD_TYPE=-static \
-#    && make PREFIX=${PREFIX} install \
+#    && git checkout ${REPO_TAG} \
+#    && make BUILD_STATIC=yes \
+#    && make install \
 #    && cd .. \
 #    && rm -rf ${REPO_NAME}
-#
-#
+
+
 #RUN REPO_NAME=espa-burned-area \
 #    && REPO_TAG=docker-development \
 #    && cd /espa/src
@@ -127,12 +122,20 @@ RUN cd /espa/src \
 #RUN REPO_NAME=espa-snow-covered-area \
 #    && REPO_TAG=docker-development \
 #    && cd /espa/src
-#
-#RUN cd /espa
+
+
+#RUN REPO_NAME=espa-processing \
+#    && REPO_TAG=espa-2.10.0-release \
+#    && cd /espa/src \
+#    && git clone https://github.com/USGS-EROS/${REPO_NAME}.git ${REPO_NAME} \
+#    && cd ${REPO_NAME} \
+#    && git checkout ${REPO_TAG}
+
+#RUN cd /espa/src/espa-processing
 
 # ----------------------------------------------------------------------------
 # Add an entrypoint so that we execute as a specific user
-#COPY container-entrypoint.sh /entrypoint.sh
-#RUN chmod 755 /entrypoint.sh
-#ENTRYPOINT ["/entrypoint.sh"]
+COPY container-entrypoint.sh /entrypoint.sh
+RUN chmod 755 /entrypoint.sh
+ENTRYPOINT ["/entrypoint.sh"]
 
